# vk-swarm

./: .coderabbit.yaml  .env.dev  .env.example  .env.swarm-node  .env.testing  .gitignore  .gitmessage  .vk_progress.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  build.sh  init.sh  local-build.sh  node_modules  package-lock.json  package.json  pnpm-lock.yaml  prepare_db.sqlite  validation-summary.txt  validation.md  vks-progress.md
crates/db/: Cargo.toml
crates/db/.sqlx/: query-00f9aa372ee7516cd600e26421764d12264463c3264e79f86734983a167755ed.json  query-01b46066f2ee69b8a98ec4a7dd25254a92f1e27b7fb49b8469aba5543895382d.json  query-01cc87b027c2ce39219873a3d845db9bb4a814c3c6fec9b0b550491a6f4c7a48.json  query-0289dc9e205bffe639f1e93e42b0a59d5d49c8d10ee48a2c023233a6e7a52d8f.json  query-0a91a401d590dd1e6c7dafd9a9d2742ea8b09f0e383124a8c091efcc30878842.json  query-0a9b21c5fc261eb1268efd15b281264c338ace18cc359be6d36e065ed121f98e.json  query-0b061993674925f5d6453fa57b55b2fda6e7a5b73afc2db05a710fd77be48c6f.json  query-0b32bf174489708cc1536cdeb030683ebbe02c6b4fc3362062fb650ab5621012.json  query-0c4f0f7537a8fe7d66b1735b94d60e9ff51fa585b7beb10174022dfa67164c3d.json  query-0d4822982c4deb2e8824835501aeffac7c9825d4b6f4281f1935f85dc125de6a.json  query-0f7a1debde534a96401449cc17bfbab7273fb3835ccffa0852b1a4312e4a92e1.json  query-11c1f223f589993ac5d6b591154aad0ea8ee8b5b29673c6efb35b9dc9acb722c.json  query-166ddaa06b771d31fedd7a9648eca8c0e39be9c77dcd25c70f06b3e74b142738.json  query-16874a5cb72db3b36ec1106c2a764a0f560ad7e412591cc03b0dcdae5113ccf6.json  (+209 more)
(+2669 files in other folders)
