[package]
name = "db"
version = "0.0.125"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
executors = { path = "../executors" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "sqlite-preupdate-hook", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

[dev-dependencies]
serial_test = "3.0"
tempfile = "3.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

